[package]
name = "hyper_https_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_hyper_rustls = "0.1.1"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }
pretty_env_logger = "0.4.0"
wasmedge_rustls_api = "0.1.1"
